@@ -1,8 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.15
-Date: 18. 06. 2019
+Date: 08. 08. 2019
   Added:
     - Signal color support for Angel's Refining and Angel's Smelting modded items
+  Changed:
+    - Sign icon selection GUI is now draggable
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.14
 Date: 03. 06. 2019
